--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -34,6 +34,12 @@
       <artifactId>fastjson2</artifactId>
       <version>2.0.29</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.11.0</version>
+    </dependency>
 
     <dependency>
       <groupId>org.junit.jupiter</groupId>
